--- a/kmc/app/src/main/res/values/strings.xml
+++ b/kmc/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">kmc</string>
+    <string name="app_name">KMC Dalit Bandhu</string>
     <string name="title_activity_user_details">userDetails</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
